(feat): update packages

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -72,14 +72,14 @@ html, body {
   }
 }
 
-.mat-tooltip {
+.mat-mdc-tooltip .mdc-tooltip__surface {
   font-family: $font-system;
   font-weight: normal;
   font-size: 14px;
   line-height: 1.25;
   color: $tooltip-color;
   border: $menu-border;
-  background: $tooltip-background;
+  background-color: $tooltip-background;
   border-radius: 12px !important;
   white-space: pre-line;
   padding: 12px !important;
