feat(dialog): update styles

--- a/src/app/shared/components/dialog/dialog.component.scss
+++ b/src/app/shared/components/dialog/dialog.component.scss
@@ -48,7 +48,7 @@
   }
 
   &__content {
-    @include mixins.scrollable;
+    @include mixins.scrollable(24px);
     padding: 8px 24px;
     height: 100%;
   }
@@ -59,35 +59,35 @@
     justify-content: flex-end;
     padding: 0 24px;
   }
-}
 
-.button {
-  min-width: 128px;
-
-  font-family: $font-system;
-  font-weight: normal;
-  color: $font-color-primary;
-  border-radius: 12px;
-}
-
-.button__submit {
-  background-color: var(--primary-color);
-  border-color: transparent;
-  color: #fff;
-
-  &.mat-button-disabled {
-    color: white;
-    opacity: 0.6;
+  .button {
+    min-width: 128px;
+  
+    font-family: $font-system;
+    font-weight: normal;
+    color: $font-color-primary;
+    border-radius: 12px;
   }
-}
+  
+  .button__submit {
+    background-color: var(--primary-color);
+    border-color: transparent;
+    color: #fff;
+  
+    &.mat-button-disabled {
+      color: white;
+      opacity: 0.6;
+    }
+  }
 
-.button__cancel {
-  background-color: transparent;
-  border-color: transparent;
-  color: $font-color-primary;
-
-  &:hover {
-    background: $background-button-hover;
+  .button__cancel {
+    background-color: transparent;
+    border-color: transparent;
+    color: $font-color-primary;
+  
+    &:hover {
+      background: $background-button-hover;
+    }
   }
 }
 
