--- a/src/app/shared/components/print-dialog/print-dialog.component.scss
+++ b/src/app/shared/components/print-dialog/print-dialog.component.scss
@@ -5,24 +5,15 @@
 .print-dialog {
   font-family: $font-system;
   display: flex;
+  gap: 12px;
   height: 100%;
   width: 100%;
   background: $background-primary;
+  padding: 24px;
+  box-sizing: border-box;
 
   overflow: hidden;
   user-select: none;
-
-  &__border {
-    padding: 8px 12px;
-    border-radius: 18px;
-    border: 1.5px solid #ebebeb;
-    position: relative;
-    margin-bottom: 28px;
-
-    &:last-child {
-      margin-bottom: 0;
-    }
-  }
 
   &__container-title {
     position: absolute;
@@ -101,7 +92,7 @@
     gap: 8px;
     justify-content: flex-end;
     margin-top: auto;
-    padding-top: 24px;
+    padding: 24px 10px 0;
 
     .button {
       min-width: 128px;
@@ -133,6 +124,31 @@
   .mat-button-toggle-button {
     width: 104px;
   }
+
+  .button {
+    width: 92px;
+  
+    border-radius: 12px;
+    font-family: $font-system;
+    font-weight: normal;
+    color: $font-color-primary;
+  }
+  
+  .button__submit {
+    background-color: var(--primary-color);
+    border-color: transparent;
+    color: #fff;
+  }
+  
+  .button__cancel {
+    background-color: transparent;
+    border-color: transparent;
+    color: $font-color-primary;
+  
+    &:hover {
+      background: $background-button-hover;
+    }
+  }
 }
 
 .columns {
@@ -154,7 +170,6 @@
 .column {
   font-family: $font-system;
   padding: 14px 12px 14px 8px;
-  color: rgba(0, 0, 0, 0.87);
   display: flex;
   align-items: center;
   gap: 8px;
@@ -173,14 +188,14 @@
     font-size: 20px;
     height: 20px;
     width: 20px;
-    color: currentColor;
+    color: $color-button-icon;
     cursor: move;
   }
 
   &__divider {
     margin: 0 36px;
     border-top-color: $color-border;
-    border-top: 1.5px dashed $color-border;
+    border-top: 2px dashed $color-border;
   }
 }
 
@@ -191,7 +206,7 @@
 
   .column {
     border-radius: 12px;
-    border: 1.5px solid $color-primary;
+    border: 2px solid $color-primary;
   }
 
   .column__divider {
@@ -213,51 +228,4 @@
 
 .columns.cdk-drop-list-dragging .print-dialog__column-container:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-}
-
-.button {
-  width: 92px;
-
-  border-radius: 8px;
-  font-family: $font-system;
-  font-weight: normal;
-  color: $font-color-primary;
-}
-
-.button__submit {
-  background-color: var(--primary-color);
-  border-color: transparent;
-  color: #fff;
-}
-
-.button__cancel {
-  background-color: transparent;
-  border-color: transparent;
-  color: $font-color-primary;
-
-  &:hover {
-    background: $background-button-hover;
-  }
-}
-
-::ng-deep .mat-checkbox-frame {
-  border-color: $color-border;
-}
-
-::ng-deep .mat-checkbox-checked .mat-checkbox-background,
-.mat-checkbox-indeterminate .mat-checkbox-background {
-  background-color: var(--primary-color) !important;
-}
-
-::ng-deep .mat-checkbox:not(.mat-checkbox-disabled) .mat-checkbox-ripple .mat-ripple-element {
-  background-color: var(--primary-color) !important;
-}
-
-::ng-deep .mat-checkbox .mat-ripple-element {
-  border-radius: 12px !important;
-}
-
-::ng-deep .mat-checkbox-disabled.mat-checkbox-checked .mat-checkbox-background,
-.mat-checkbox-disabled.mat-checkbox-indeterminate .mat-checkbox-background {
-  background-color: #b0b0b0 !important;
 }
