--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
   <ng-container content>
     <section class="grid grid--{{gridView}}">
     <app-dashboard-item type="changelog"
-                        header="4.2.0"
+                        header="{{appConfig.version}}"
                         [description]="'PAGES.DASHBOARD.CHANGELOG.DESCRIPTION' | translate"
                         class="card"
                         (click)="openReleaseNotes()">
