--- a/src/app/navigation/categories-tree/categories-tree-node/categories-tree-node.component.html
+++ b/src/app/navigation/categories-tree/categories-tree-node/categories-tree-node.component.html
@@ -52,7 +52,7 @@
         <span>{{"MENU.ADD" | translate}}</span>
       </button>
       <button class="menu-item" mat-menu-item (click)="onEdit()">
-        <mat-icon svgIcon="edit"></mat-icon>
+        <mat-icon class="mat-item__icon mat-item__icon--edit" svgIcon="edit"></mat-icon>
         <span>{{"MENU.EDIT" | translate}}</span>
       </button>
       <div class="mat-menu__divider"></div>
