--- a/src/app/shared/components/move-dialog/move-dialog.component.html
+++ b/src/app/shared/components/move-dialog/move-dialog.component.html
@@ -7,10 +7,10 @@
   >
     <section content>
       <div class="move-dialog__panel">
-        <app-input class="records-table__search"
+        <!-- <app-input class="records-table__search"
                    (onChange)="onSearchChange($event)"
         >
-        </app-input>
+        </app-input> -->
       </div>
 
       <div class="move-dialog__list">
