--- a/src/app/shared/components/table/table-panel/table-panel.component.html
+++ b/src/app/shared/components/table/table-panel/table-panel.component.html
@@ -16,7 +16,7 @@
   }
   <div class="table-panel__expander"></div>
   <app-button button-transparent (click)="add.emit()">
-    <mat-icon svgIcon="add"></mat-icon>
+    <mat-icon>add</mat-icon>
   </app-button>
   <app-button button-transparent [matMenuTriggerFor]="contextMenu">
     <mat-icon>file_download</mat-icon>
