--- a/src/app/shared/components/table/table.component.scss
+++ b/src/app/shared/components/table/table.component.scss
@@ -81,6 +81,10 @@
     &--selected {
       background: $background-button-hover;
     }
+
+    &--context-menu {
+      background: $background-button-hover;
+    }
   }
 
   &--column-select {
