--- a/src/_animations.scss
+++ b/src/_animations.scss
@@ -1,17 +1,9 @@
 @keyframes shake {
-  10%, 90% {
-    transform: translate3d(-1px, 0, 0);
-  }
-  
-  20%, 80% {
-    transform: translate3d(2px, 0, 0);
-  }
-
-  30%, 50%, 70% {
+  10%, 50%, 90% {
     transform: translate3d(-2px, 0, 0);
   }
 
-  40%, 60% {
+   40%, 70% {
     transform: translate3d(2px, 0, 0);
   }
 }
@@ -99,6 +91,30 @@
   }
   75% {
     transform: scale3d(1.05, 0.95, 1);
+  }
+  100% {
+    transform: scale3d(1, 1, 1);
+  }
+}
+
+@keyframes squeeze-horizontal {
+  0% {
+    transform: scale3d(1, 1, 1);
+  }
+  30% {
+    transform: scale3d(0.75, 1.25, 1);
+  }
+  40% {
+    transform: scale3d(1.25, 0.75, 1);
+  }
+  50% {
+    transform: scale3d(0.85, 1.15, 1);
+  }
+  65% {
+    transform: scale3d(1.05, 0.95, 1);
+  }
+  75% {
+    transform: scale3d(0.95, 1.05, 1);
   }
   100% {
     transform: scale3d(1, 1, 1);
