--- a/src/app/shared/components/feedback-dialog/feedback-dialog.component.html
+++ b/src/app/shared/components/feedback-dialog/feedback-dialog.component.html
@@ -28,8 +28,8 @@
     </mat-form-field>
     <mat-form-field [floatLabel]="'always'">
       <mat-label>{{"DIALOG.FIELDS.TEXT" | translate}}</mat-label>
-      <textarea cdkFocusInitial class="feedback__note" [formControlName]="'text'" matInput [required]="true"></textarea>
-      <mat-error *ngIf="feedbackForm.get('text').hasError('required')">
+      <textarea cdkFocusInitial class="feedback__note" [formControlName]="'message'" matInput [required]="true"></textarea>
+      <mat-error *ngIf="feedbackForm.get('message').hasError('required')">
         {{'DIALOG.VALIDATIONS.TEXT' | translate}}
       </mat-error>
     </mat-form-field>
