--- a/src/app/shared/components/release-notes/release-notes.component.html
+++ b/src/app/shared/components/release-notes/release-notes.component.html
@@ -1,17 +1,21 @@
 <section class="release-notes">
-  <app-dialog [title]="'Car Maintenance 4.2.0'"
+  <app-dialog [title]="'Car Maintenance 4.3.0'"
               hideFooter="true"
               (close)="dialogRef.close()"
     >
     <main content class="release-notes__content">
       <div class="container">
-        <h3 class="release-notes__title">{{releaseNotes[appLanguage].settings}}</h3>
-        <ul class="release-notes__list">
-          <li class="release-notes__text">{{releaseNotes[appLanguage].progress['0']}}</li>
-        </ul>
         <h3 class="release-notes__title">{{releaseNotes[appLanguage].welcomePage}}</h3>
         <ul class="release-notes__list">
           <li class="release-notes__text">{{releaseNotes[appLanguage].progress['1']}}</li>
+        </ul>
+        <h3 class="release-notes__title">{{releaseNotes[appLanguage].dashboard}}</h3>
+        <ul class="release-notes__list">
+          <li class="release-notes__text">{{releaseNotes[appLanguage].progress['2']}}</li>
+        </ul>
+        <h3 class="release-notes__title">{{releaseNotes[appLanguage].settings}}</h3>
+        <ul class="release-notes__list">
+          <li class="release-notes__text">{{releaseNotes[appLanguage].progress['0']}}</li>
         </ul>
       </div>
     </main>
