--- a/src/app/shared/components/settings/setting/setting.component.scss
+++ b/src/app/shared/components/settings/setting/setting.component.scss
@@ -5,7 +5,7 @@
   min-height: 56px;
   justify-content: space-between;
   align-items: center;
-  padding: 0 16px;
+  padding: 2px 16px;
 
   &__label {
     display: flex;
