--- a/src/styles/platform/_darwin.scss
+++ b/src/styles/platform/_darwin.scss
@@ -1,4 +1,4 @@
-html[data-platform='windows'] {
+html[data-platform='darwin'] {
   &[data-theme='light'] {
     --background-primary: white;
     --background-secondary: #fafafa;
@@ -29,36 +29,48 @@ html[data-platform='windows'] {
     --dashboard-card-icon-color: var(--platform-color-secondary);
 
     --widget-icon-background: var(--secondary-color);
+
+    --color-divider: #4b4848;
+    --stack-icon-color: #4b4848;
+    --stack-icon-background: #f0f0f0;
+
+    --snackbar-border-color: #333;
   }
 
   &[data-theme='dark'] {
-    --background-primary: #202020;
-    --background-secondary: #2b2b2b;
-    --background-button-hover: #2d2d2d;
-    --background-loader: #202020ad;
+    --background-primary: #343434;
+    --background-secondary: #3e3e3e;
+    --background-button-hover: #ffffff12;
+    --background-loader: #343434ad;
 
-    --color-border: #343434;
-    --color-button-icon: white;
-    --color-dangerous: #b7060d;
+    --color-border: #4d4d4d;
+    --color-button-icon: #f7f7f7;
+    --color-dangerous: #b62329;
 
     --platform-color-primary: white;
-    --platform-color-secondary: #9e9e9e;
+    --platform-color-secondary: #a6a6a6;
 
-    --select-expand-icon-color: var(--platform-color-primary);
+    --select-expand-icon-color: #d2d5d9;
 
     --toggle-active-color: var(--platform-color-primary);
 
-    --menu-border: 1.5px solid var(--color-border);
+    --menu-border: 2px solid var(--color-border);
 
     --tooltip-background: var(--background-primary);
     --tooltip-color: var(--platform-color-primary);
 
-    --dashboard-background-secondary: #2b2b2b;
-    --dashboard-illustration-background-primary: #2b2b2b;
+    --dashboard-background-secondary: #3e3e3e;
+    --dashboard-illustration-background-primary: #3e3e3e;
     --dashboard-illustration-background-secondary: var(--background-secondary);
     --dashboard-illustration-background-tertiary: #4b4848;
     --dashboard-card-icon-color: #5d5d5d;
 
     --widget-icon-background: var(--background-secondary);
+
+    --color-divider: #f7f7f7;
+    --stack-icon-color: white;
+    --stack-icon-background: #414141;
+
+    --snackbar-border-color: #4d4d4d;
   }
 }
