--- a/src/styles/platform/_windows.scss
+++ b/src/styles/platform/_windows.scss
@@ -1,4 +1,4 @@
-html[data-platform='darwin'] {
+html[data-platform='windows'] {
   &[data-theme='light'] {
     --background-primary: white;
     --background-secondary: #fafafa;
@@ -32,29 +32,29 @@ html[data-platform='darwin'] {
   }
 
   &[data-theme='dark'] {
-    --background-primary: #343434;
-    --background-secondary: #3e3e3e;
-    --background-button-hover: #ffffff12;
-    --background-loader: #343434ad;
+    --background-primary: #202020;
+    --background-secondary: #2b2b2b;
+    --background-button-hover: #2d2d2d;
+    --background-loader: #202020ad;
 
-    --color-border: #4d4d4d;
-    --color-button-icon: #f7f7f7;
-    --color-dangerous: #b62329;
+    --color-border: #343434;
+    --color-button-icon: white;
+    --color-dangerous: #b7060d;
 
     --platform-color-primary: white;
-    --platform-color-secondary: #a6a6a6;
+    --platform-color-secondary: #9e9e9e;
 
-    --select-expand-icon-color: #d2d5d9;
+    --select-expand-icon-color: var(--platform-color-primary);
 
     --toggle-active-color: var(--platform-color-primary);
 
-    --menu-border: 1.5px solid var(--color-border);
+    --menu-border: 2px solid var(--color-border);
 
     --tooltip-background: var(--background-primary);
     --tooltip-color: var(--platform-color-primary);
 
-    --dashboard-background-secondary: #3e3e3e;
-    --dashboard-illustration-background-primary: #3e3e3e;
+    --dashboard-background-secondary: #2b2b2b;
+    --dashboard-illustration-background-primary: #2b2b2b;
     --dashboard-illustration-background-secondary: var(--background-secondary);
     --dashboard-illustration-background-tertiary: #4b4848;
     --dashboard-card-icon-color: #5d5d5d;
