--- a/src/app/shared/currency/currency.component.scss
+++ b/src/app/shared/currency/currency.component.scss
@@ -22,8 +22,8 @@
     padding: 2px;
   
     border-radius: 6px;
-    background: $color-button-icon;
-    color: $background-primary;
+    background: $color-border;
+    color: $font-color-primary;
     font-size: 14px;
     font-variation-settings: 'wght' 900;
     line-height: 1;
