--- a/src/app/shared/components/release-notes/release-notes.component.html
+++ b/src/app/shared/components/release-notes/release-notes.component.html
@@ -5,17 +5,17 @@
     >
     <main content class="release-notes__content">
       <div class="container">
-        <h3 class="release-notes__title">{{releaseNotes[appLanguage].welcomePage}}</h3>
+        <h3 class="release-notes__title">{{releaseNote.welcomePage}}</h3>
         <ul class="release-notes__list">
-          <li class="release-notes__text">{{releaseNotes[appLanguage].progress['1']}}</li>
+          <li class="release-notes__text">{{releaseNote.progress[1]}}</li>
         </ul>
-        <h3 class="release-notes__title">{{releaseNotes[appLanguage].dashboard}}</h3>
+        <h3 class="release-notes__title">{{releaseNote.dashboard}}</h3>
         <ul class="release-notes__list">
-          <li class="release-notes__text">{{releaseNotes[appLanguage].progress['2']}}</li>
+          <li class="release-notes__text">{{releaseNote.progress[2]}}</li>
         </ul>
-        <h3 class="release-notes__title">{{releaseNotes[appLanguage].settings}}</h3>
+        <h3 class="release-notes__title">{{releaseNote.settings}}</h3>
         <ul class="release-notes__list">
-          <li class="release-notes__text">{{releaseNotes[appLanguage].progress['0']}}</li>
+          <li class="release-notes__text">{{releaseNote.progress[0]}}</li>
         </ul>
       </div>
     </main>
