--- a/src/app/shared/components/rich-widget/rich-widget.component.scss
+++ b/src/app/shared/components/rich-widget/rich-widget.component.scss
@@ -2,19 +2,20 @@
 @import '/src/fonts';
 
 .rich-widget {
-  min-width: 164px;
   position: relative;
   font-family: $font-system;
-  border-radius: 24px;
   box-sizing: border-box;
   display: flex;
-  flex-direction: column;
-  gap: 8px;
+  align-items: center;
+  gap: 12px;
 
-  background: $background-primary;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
-  transition: box-shadow 0.3s ease-in;
-  padding: 16px 16px 12px 16px;
+  &--background {
+    padding: 16px;
+
+    border-radius: 24px;
+    background: $background-primary;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
+  }
 
   &__info {
     position: absolute;
@@ -30,13 +31,13 @@
 
   &__info-section {
     display: flex;
-    flex-direction: column;
-    gap: 2px;
+    flex-direction: column-reverse;
+    gap: 4px;
   }
 
   &__title {
     font-size: 12px;
-    font-weight: 500;
+    font-weight: 400;
     color: $font-color-secondary;
   }
 
@@ -45,8 +46,8 @@
     align-items: center;
 
     color: $font-color-primary;
-    font-size: 16px;
-    font-weight: bold;
+    font-size: 14px;
+    font-weight: 500;
   }
 
   &__illustration {
